sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:18: error: not found: value finTRi
        finTRi = true
        ^